# trackmaster

./: .gitignore  README.md  fully_local_trainer.py  hyperparams_tiny.py  local_trainer.py  pyproject.toml  remote_trainer.ipynb  test_connection.py  test_obs_space.py  trackmaster.py  trainer.py  trajectory_data.pkl
docs/: TMRL_CONCEPTS.md  TrackManiaPPO.ipynb  tmrl_tuto_library.md
notebooks/: remote_trainer.ipynb  trackmaster.ipynb
src/: actor.py  agent.py  network.py  utils.py
src/og/: actor.py  trackmaster.py  trainer.py
src/old/: online_memory.py  ppo_example.py  ppo_training_agent.py  standalone_trainer.py  training_online.py
src/scripts/: collect_trajectory_v0.py  fully_local_trainer.py  local_trainer.py
test/: start_local.py  test_env_structure.py
