[project]
name = "trackmaster"
version = "0.1.0"
description = "Vision-Based Deep Reinforcement Learning for Real-Time Autonomous Control in TrackMania"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "matplotlib>=3.10.7",
    "tmrl>=0.7.1",
    "torch>=2.8.0",
    "torchvision>=0.22.0",
    "transformers>=4.57.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
